# apple-music-downloader

./: .gitignore  .gitmodules  Dockerfile  agent-arm64.js  agent.js  build.sh  config.example.yaml  go.mod  go.sum  main.go  preprootfs.sh  shell.nix
utils/runv2/: runv2.go
wrapper/: .gitignore  CMakeLists.txt  cmdline.c  cmdline.h  config.h  fairplay-1.crt  fairplay-2.crt  import.h  main.c  subhookwrapper.cpp  wrapper.ggo
